// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Code output renders correctly 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "output": {
      "type": "code",
      "value": "display('');",
    },
  },
  "type": [Function],
}
`;

exports[`Empty output renders an empty card 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "output": {},
  },
  "type": [Function],
}
`;

exports[`Error output (no consoleLogs) renders correctly 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "output": {
      "consoleLogs": [],
      "errors": [
        TypeError {
          "chapter": 4,
          "expected": "",
          "got": "",
          "location": {
            "end": {
              "column": -1,
              "line": -1,
            },
            "start": {
              "column": -1,
              "line": -1,
            },
          },
          "severity": "Error",
          "side": "",
          "type": "Runtime",
        },
      ],
      "type": "errors",
    },
  },
  "type": [Function],
}
`;

exports[`Error output (with consoleLogs) renders correctly 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "output": {
      "consoleLogs": [
        "a",
        "bb",
        "cccccccccccccccccccccccccccccccc",
        "d",
      ],
      "errors": [
        TypeError {
          "chapter": 4,
          "expected": "",
          "got": "",
          "location": {
            "end": {
              "column": -1,
              "line": -1,
            },
            "start": {
              "column": -1,
              "line": -1,
            },
          },
          "severity": "Error",
          "side": "",
          "type": "Runtime",
        },
      ],
      "type": "errors",
    },
  },
  "type": [Function],
}
`;

exports[`Repl renders correctly 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "externalLibrary": "NONE",
    "handleBrowseHistoryDown": [Function],
    "handleBrowseHistoryUp": [Function],
    "handleReplEval": [Function],
    "handleReplOutputClear": [Function],
    "handleReplValueChange": [Function],
    "output": [
      {
        "consoleLogs": [],
        "type": "result",
        "value": 42,
      },
      {
        "type": "code",
        "value": "display('');",
      },
      {
        "consoleLogs": [],
        "errors": [
          TypeError {
            "chapter": 4,
            "expected": "",
            "got": "",
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "start": {
                "column": -1,
                "line": -1,
              },
            },
            "severity": "Error",
            "side": "",
            "type": "Runtime",
          },
        ],
        "type": "errors",
      },
      {
        "consoleLogs": [
          "a",
          "bb",
          "cccccccccccccccccccccccccccccccc",
          "d",
        ],
        "type": "running",
      },
    ],
    "replButtons": [],
    "replValue": "",
    "sourceChapter": 1,
    "sourceVariant": "default",
  },
  "type": [Function],
}
`;

exports[`Result output (no consoleLogs) renders correctly 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "output": {
      "consoleLogs": [],
      "type": "result",
      "value": 42,
    },
  },
  "type": [Function],
}
`;

exports[`Result output (with consoleLogs) renders correctly 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "output": {
      "consoleLogs": [
        "a",
        "bb",
        "cccccccccccccccccccccccccccccccc",
        "d",
      ],
      "type": "result",
      "value": 42,
    },
  },
  "type": [Function],
}
`;

exports[`Running output renders correctly 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "output": {
      "consoleLogs": [
        "a",
        "bb",
        "cccccccccccccccccccccccccccccccc",
        "d",
      ],
      "type": "running",
    },
  },
  "type": [Function],
}
`;
